gemx/src/python/gemx_host.h

gemx::FCNHost<short*> * MakeFCNHost(char *xclbin, char * kernName);
void SendToFPGAShrt(gemx::FCNHost<short*> * gh, short *A,  unsigned long long num_elem, bool sync_send);
void SendToFPGAInt(gemx::FCNHost<short*> * gh, int *A,  unsigned long long num_elem, bool sync_send);
void* GetFromFPGA(gemx::FCNHost<short*> * gh, short *A, bool sync_get);
void Wait ( gemx::FCNHost<short*> * gh );
bool AddFCNOp(gemx::FCNHost<short*> * gh, void * A, void * B, void *C, void * bias,  unsigned int m, unsigned int k, unsigned int n, int postScale, int postShift, short PReLUScale, short PReLUAlpha );
void Execute (gemx::FCNHost<short*> * gh);
gemx::GEMMHost<short*> * MakeGEMMHost(char *xclbin, char * kernName);
//void AddGEMMOp(gemx::FCNHost<short*> * gh, void * A, void * B, void *C,  unsigned int m, unsigned int k, unsigned int n);

bool AddGEMMOp(gemx::GEMMHost<short*> * gh, void * A, void * B, void *C, void * bias,  unsigned int m, unsigned int k, unsigned int n, int postScale, int postShift);